[gd_scene load_steps=39 format=3 uid="uid://lj556bic6wni"]

[ext_resource type="Script" path="res://source/npc.gd" id="1_svqrw"]
[ext_resource type="Texture2D" uid="uid://cx0g3ud5dravy" path="res://assets/img/npc1.png" id="2_pfuus"]
[ext_resource type="PackedScene" uid="uid://csr72687hk4ee" path="res://source/player/player_detector.tscn" id="3_f77qh"]
[ext_resource type="Texture2D" uid="uid://dl8l17lvf63bg" path="res://assets/img/exclamation.png" id="4_jdj8u"]

[sub_resource type="Animation" id="Animation_kni5c"]
resource_name = "IdleDown"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_hinbb"]
resource_name = "IdleLeft"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_xqxdv"]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.71239]
}

[sub_resource type="Animation" id="Animation_0xqty"]
resource_name = "IdleUp"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}

[sub_resource type="Animation" id="Animation_d1ncl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_82n20"]
resource_name = "WalkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_7ha2j"]
resource_name = "WalkLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [3, 4, 5, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.5708]
}

[sub_resource type="Animation" id="Animation_ep6ih"]
resource_name = "WalkRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [4.71239]
}

[sub_resource type="Animation" id="Animation_ewyaj"]
resource_name = "WalkUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 10]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivot:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r1bx1"]
_data = {
"IdleDown": SubResource("Animation_kni5c"),
"IdleLeft": SubResource("Animation_hinbb"),
"IdleRight": SubResource("Animation_xqxdv"),
"IdleUp": SubResource("Animation_0xqty"),
"RESET": SubResource("Animation_d1ncl"),
"WalkDown": SubResource("Animation_82n20"),
"WalkLeft": SubResource("Animation_7ha2j"),
"WalkRight": SubResource("Animation_ep6ih"),
"WalkUp": SubResource("Animation_ewyaj")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wxyse"]
animation = &"IdleLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_bqkoo"]
animation = &"IdleRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4r1bm"]
animation = &"IdleDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_1jkbx"]
animation = &"IdleUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_l2s14"]
blend_point_0/node = SubResource("AnimationNodeAnimation_wxyse")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_bqkoo")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_4r1bm")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_1jkbx")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_8hks8"]
animation = &"WalkLeft"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_hqxn7"]
animation = &"WalkRight"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jy3ib"]
animation = &"WalkDown"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n6ihu"]
animation = &"WalkUp"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_qebeo"]
blend_point_0/node = SubResource("AnimationNodeAnimation_8hks8")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_hqxn7")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_jy3ib")
blend_point_2/pos = Vector2(0, 1.1)
blend_point_3/node = SubResource("AnimationNodeAnimation_n6ihu")
blend_point_3/pos = Vector2(0, -1.1)
min_space = Vector2(-1, -1.1)
max_space = Vector2(1, 1.1)
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ra40w"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_1pv2k"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ce5qj"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_2dl8p"]
states/Idle/node = SubResource("AnimationNodeBlendSpace2D_l2s14")
states/Idle/position = Vector2(254.667, 100.667)
states/Start/position = Vector2(99.3333, 99.3333)
states/Walk/node = SubResource("AnimationNodeBlendSpace2D_qebeo")
states/Walk/position = Vector2(678, 99.7778)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_ra40w"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_1pv2k"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_ce5qj")]

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_pr6nw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_82ny1"]
radius = 2.0
height = 14.0

[sub_resource type="AtlasTexture" id="AtlasTexture_xognh"]
atlas = ExtResource("4_jdj8u")
region = Rect2(0, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_6pkhm"]
atlas = ExtResource("4_jdj8u")
region = Rect2(11, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5ytr"]
atlas = ExtResource("4_jdj8u")
region = Rect2(22, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsfkj"]
atlas = ExtResource("4_jdj8u")
region = Rect2(33, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_ldc8t"]
atlas = ExtResource("4_jdj8u")
region = Rect2(44, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vya2"]
atlas = ExtResource("4_jdj8u")
region = Rect2(55, 0, 11, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpnjj"]
atlas = ExtResource("4_jdj8u")
region = Rect2(66, 0, 11, 22)

[sub_resource type="SpriteFrames" id="SpriteFrames_2sxj3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xognh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6pkhm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5ytr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsfkj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ldc8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vya2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpnjj")
}],
"loop": false,
"name": &"default",
"speed": 10.0
}]

[node name="NPC" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
collision_layer = 4
motion_mode = 1
platform_on_leave = 2
script = ExtResource("1_svqrw")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_pfuus")
offset = Vector2(0.5, -10)
hframes = 12
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_r1bx1")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_2dl8p")
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_pr6nw")
parameters/Idle/blend_position = Vector2(0, 1)
parameters/Walk/blend_position = Vector2(0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_82ny1")

[node name="RouteTimer" type="Timer" parent="."]
one_shot = true

[node name="Pivot" type="Marker2D" parent="."]

[node name="PlayerDetector" parent="Pivot" instance=ExtResource("3_f77qh")]

[node name="Exclamation" type="AnimatedSprite2D" parent="."]
z_index = 10
position = Vector2(0, -37)
sprite_frames = SubResource("SpriteFrames_2sxj3")

[connection signal="player_seen" from="Pivot/PlayerDetector" to="." method="_on_player_detector_player_seen"]
[connection signal="animation_finished" from="Exclamation" to="." method="_on_exclamation_animation_finished"]
